# algorithm-py

./: .env  pyproject.toml
algorithm_py/: amz_oa.py  array_of_products.py  count_spikes.py  cube.py  draw_h_tree_note.txt  find_longest_peaks.py  fixed_size_sliding_window.py  four_numer_sum.py  largest_rectangle_area.py  main.py  maximal_rectangle.py  merged_string_alternately.py  msc.py  spiral_traverse.py  test.py  underscorify_string.py  validate_bst.py
algorithm_py/100_problems/: arrays.py  basic_calculator.py  linked_lists.py  matrix.py  strings.py  trees.py  union_find.py
algorithm_py/aws/: count_inversions.py  longest_subsequent_with_removal.py  longest_substring_wo_prohibited.py  longest_substring_wo_prohibited_2.py  min_time_rate_limiter.py  next_lexicographic_special_string.py  outliner.py  permutation_of_string.py  reorganize_string.py  task_scheduler.py  word_ladder.py
algorithm_py/codeforces/: localization.py
algorithm_py/elements_of_programming_interviews/: eopi_arrays.py  eopi_arrays_2.py  eopi_graphs.py  eopi_hashtables_12.py  eopi_strings.py
algorithm_py/graphs/: alien_dictionary.py  (+5 more)
designs/: binary_search_problems.md  elements_of_programming_interview_snippets.md  hashmap_and_pointers.md  k_problems.md  k_related_problem.epub  k_related_problem.mobi  nearby-friend.drawio  tree_problems.md
notes/: arrays.md  aws_prep.py  basic_calculator_problems.md  elements_of_programming_interview_snippets.epub  graph_tree_problems.md  hashmap_and_pointers.epub  hashmap_and_pointers.mobi
tests/: array_of_products_test.py  largest_rectangle_area_test.py
(+19 files in other folders)
